<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/countryCardRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
...
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/populationTextView"
                app:layout_constraintStart_toEndOf="@+id/flagImageView"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                tools:text="Region: Asia" />

            <TextView
                android:id="@+id/populationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
